# dirtiestships-website

./: .gitignore  CLAUDE.md  CNAME  FAQ.html  ads.txt  blog.html  boox_notes_to_email.py  calculate_cii_ratings.py  chart.html  charts.html  check_scheduled_emissions.py  cii.html  companies.html  companies_top15.json  company.html  compare.html  convert_excel_to_json.py  countries.html  countries_top20.json  daily_news_summary.py  disclaimer.html  emissions_blog_generator.py  emissions_news_scraper.py  emissions_publish_draft.py  eua_price_scraper.py  hydrogen_news_scraper.py  imo_scraper.py  index.html  llms.txt  mrv_update_checker.py  news.html  privacy.html  requirements_boox.txt  robots.txt  rules.html  setup_eua_cron.sh  ship.html  ships_by_type.json  ships_data.json  sitemap.xml  (+1 more)
boox-notes-conversion/: .gitignore  README.md  pyproject.toml
boox-notes-conversion/src/: cli.py  convert.py  email_sender.py  extract.py  tracker.py
boox-notes-conversion/tests/: test_convert.py  test_extract.py  test_tracker.py
css/: styles.css
json/: 2020_countries_top20.json  2020_ships_by_type.json  2020_ships_data.json  2021_countries_top20.json  2021_ships_by_type.json  2021_ships_data.json  2022_countries_top20.json  2022_ships_by_type.json  2022_ships_data.json  2023_countries_top20.json  2023_ships_by_type.json  2023_ships_data.json  2024_companies_all.json  2024_companies_top15.json  2024_countries_top20.json  2024_ships_by_type.json  2024_ships_data.json  2025_companies_all.json  2025_companies_top15.json  2025_countries_top20.json  2025_ships_by_type.json  blog.json  (+9 more)
(+22673 files in other folders)
